fix(style): margin bottom under main content on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -84,6 +84,7 @@ main {
     min-height: 100vh;
     max-height: none;
     margin-top: 0;
+    margin-bottom: 0;
     border-radius: 0;
   }
 }
